# customer-service-bot--RVNP

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  scraper.py
src/: combine_files.py  main.py
src/dataset/: combined_rag_data.jsonl  hef_data_for_rag.jsonl  rvist_data.jsonl
src/services/: chatbot.py  data_loader.py  prompt_builder.py
src/services/scraper/site_scraper/site_scraper/: middlewares.py  settings.py
src/services/scraper/site_scraper/site_scraper/spiders/: heq_faq_spider.py  site_spider.py
src/views/static/: script.js
src/views/templates/: index.html
