[tool.poetry]
name = "customer-service-bot"
version = "0.1.0"
description = "A simple website chatbot powered by FastAPI and Gemini."
# FIX 1: Changed authors to a list of strings
authors = ["Nevil-ing <nevilpurpp12@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
# FIX 2: 'python' requirement moved here
python = ">=3.13"
uvicorn = {extras = ["standard"], version = ">=0.29.0,<0.35.0"}
fastapi = ">=0.111.0,<0.116.0"
python-dotenv = ">=1.0.1,<2.0.0"
requests = ">=2.32.0,<3.0.0"
scrapy = ">=2.11.2,<3.0.0"
google-generativeai = ">=0.5.4,<0.6.0"
openai = ">=1.3.0,<2.0.0"
jinja2 = ">=3.1.4,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"